Code/syntax.output
Terminals unused in grammar

   UNKNOWN


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 $@1: %empty

    5 ExtDef: Specifier ExtDecList $@1 SEMI

    6 $@2: %empty

    7 ExtDef: Specifier $@2 SEMI
    8       | Specifier FunDec CompSt
    9       | Specifier FunDec SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 $@3: %empty

   15 StructSpecifier: STRUCT OptTag LC DefList $@3 RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID

   21 $@4: %empty

   22 VarDec: VarDec LB INT $@4 RB

   23 $@5: %empty

   24 FunDec: ID LP VarList $@5 RP

   25 $@6: %empty

   26 FunDec: ID LP $@6 RP

   27 VarList: ParamDec COMMA VarList
   28        | ParamDec

   29 ParamDec: Specifier VarDec

   30 $@7: %empty

   31 CompSt: LC DefList StmtList $@7 RC
   32       | error RC

   33 StmtList: Stmt StmtList
   34         | %empty

   35 $@8: %empty

   36 Stmt: Exp $@8 SEMI
   37     | CompSt

   38 $@9: %empty

   39 Stmt: RETURN Exp $@9 SEMI
   40     | IF LP Exp RP Stmt
   41     | IF LP Exp RP Stmt ELSE Stmt

   42 $@10: %empty

   43 $@11: %empty

   44 Stmt: WHILE LP Exp $@10 RP $@11 Stmt
   45     | error SEMI

   46 DefList: Def DefList
   47        | %empty

   48 $@12: %empty

   49 Def: Specifier DecList $@12 SEMI

   50 DecList: Dec
   51        | Dec COMMA DecList

   52 Dec: VarDec
   53    | VarDec ASSIGNOP Exp

   54 Exp: Exp ASSIGNOP Exp
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp RELOP Exp
   58    | Exp PLUS Exp
   59    | Exp MINUS Exp
   60    | Exp STAR Exp
   61    | Exp DIV Exp

   62 $@13: %empty

   63 Exp: LP Exp $@13 RP
   64    | MINUS Exp
   65    | NOT Exp

   66 $@14: %empty

   67 Exp: ID LP Args $@14 RP

   68 $@15: %empty

   69 Exp: ID LP $@15 RP

   70 $@16: %empty

   71 Exp: Exp LB Exp $@16 RB
   72    | Exp DOT ID
   73    | ID
   74    | INT
   75    | FLOAT

   76 Args: Exp COMMA Args
   77     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 32 45
INT (258) 22 74
FLOAT (259) 75
ID (260) 17 19 20 24 26 67 69 72 73
SEMI (261) 5 7 9 36 39 45 49
COMMA (262) 11 27 51 76
DOT (263) 72
ASSIGNOP (264) 53 54
RELOP (265) 57
MINUS (266) 59 64
PLUS (267) 58
STAR (268) 60
DIV (269) 61
AND (270) 55
OR (271) 56
NOT (272) 65
TYPE (273) 12
STRUCT (274) 15 16
LP (275) 24 26 40 41 44 63 67 69
RP (276) 24 26 40 41 44 63 67 69
LB (277) 22 71
RB (278) 22 71
LC (279) 15 31
RC (280) 15 31 32
RETURN (281) 39
IF (282) 40 41
ELSE (283) 41
WHILE (284) 44
UNKNOWN (285)
LOWER_THAN_ELSE (286)
NEG (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 2
ExtDef (36)
    on left: 5 7 8 9, on right: 2
$@1 (37)
    on left: 4, on right: 5
$@2 (38)
    on left: 6, on right: 7
ExtDecList (39)
    on left: 10 11, on right: 5 11
Specifier (40)
    on left: 12 13, on right: 5 7 8 9 29 49
StructSpecifier (41)
    on left: 15 16, on right: 13
$@3 (42)
    on left: 14, on right: 15
OptTag (43)
    on left: 17 18, on right: 15
Tag (44)
    on left: 19, on right: 16
VarDec (45)
    on left: 20 22, on right: 10 11 22 29 52 53
$@4 (46)
    on left: 21, on right: 22
FunDec (47)
    on left: 24 26, on right: 8 9
$@5 (48)
    on left: 23, on right: 24
$@6 (49)
    on left: 25, on right: 26
VarList (50)
    on left: 27 28, on right: 24 27
ParamDec (51)
    on left: 29, on right: 27 28
CompSt (52)
    on left: 31 32, on right: 8 37
$@7 (53)
    on left: 30, on right: 31
StmtList (54)
    on left: 33 34, on right: 31 33
Stmt (55)
    on left: 36 37 39 40 41 44 45, on right: 33 40 41 44
$@8 (56)
    on left: 35, on right: 36
$@9 (57)
    on left: 38, on right: 39
$@10 (58)
    on left: 42, on right: 44
$@11 (59)
    on left: 43, on right: 44
DefList (60)
    on left: 46 47, on right: 15 31 46
Def (61)
    on left: 49, on right: 46
$@12 (62)
    on left: 48, on right: 49
DecList (63)
    on left: 50 51, on right: 49 51
Dec (64)
    on left: 52 53, on right: 50 51
Exp (65)
    on left: 54 55 56 57 58 59 60 61 63 64 65 67 69 71 72 73 74 75,
    on right: 36 39 40 41 44 53 54 55 56 57 58 59 60 61 63 64 65 71
    72 76 77
$@13 (66)
    on left: 62, on right: 63
$@14 (67)
    on left: 66, on right: 67
$@15 (68)
    on left: 68, on right: 69
$@16 (69)
    on left: 70, on right: 71
Args (70)
    on left: 76 77, on right: 67 76


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 2

   15 StructSpecifier: STRUCT . OptTag LC DefList $@3 RC
   16                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    5 ExtDef: Specifier . ExtDecList $@1 SEMI
    7       | Specifier . $@2 SEMI
    8       | Specifier . FunDec CompSt
    9       | Specifier . FunDec SEMI

    ID  shift, and go to state 13

    $default  reduce using rule 6 ($@2)

    $@2         go to state 14
    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 9

   15 StructSpecifier: STRUCT OptTag . LC DefList $@3 RC

    LC  shift, and go to state 18


State 10

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   20 VarDec: ID .
   24 FunDec: ID . LP VarList $@5 RP
   26       | ID . LP $@6 RP

    LP  shift, and go to state 19

    $default  reduce using rule 20 (VarDec)


State 14

    7 ExtDef: Specifier $@2 . SEMI

    SEMI  shift, and go to state 20


State 15

    5 ExtDef: Specifier ExtDecList . $@1 SEMI

    $default  reduce using rule 4 ($@1)

    $@1  go to state 21


State 16

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   22 VarDec: VarDec . LB INT $@4 RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 10 (ExtDecList)


State 17

    8 ExtDef: Specifier FunDec . CompSt
    9       | Specifier FunDec . SEMI

    error  shift, and go to state 24
    SEMI   shift, and go to state 25
    LC     shift, and go to state 26

    CompSt  go to state 27


State 18

   15 StructSpecifier: STRUCT OptTag LC . DefList $@3 RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 19

   24 FunDec: ID LP . VarList $@5 RP
   26       | ID LP . $@6 RP

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 25 ($@6)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    $@6              go to state 32
    VarList          go to state 33
    ParamDec         go to state 34


State 20

    7 ExtDef: Specifier $@2 SEMI .

    $default  reduce using rule 7 (ExtDef)


State 21

    5 ExtDef: Specifier ExtDecList $@1 . SEMI

    SEMI  shift, and go to state 35


State 22

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 16


State 23

   22 VarDec: VarDec LB . INT $@4 RB

    INT  shift, and go to state 38


State 24

   32 CompSt: error . RC

    RC  shift, and go to state 39


State 25

    9 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 9 (ExtDef)


State 26

   31 CompSt: LC . DefList StmtList $@7 RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 30


State 27

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 28

   49 Def: Specifier . DecList $@12 SEMI

    ID  shift, and go to state 36

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


State 29

   15 StructSpecifier: STRUCT OptTag LC DefList . $@3 RC

    $default  reduce using rule 14 ($@3)

    $@3  go to state 44


State 30

   46 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 45
    Def              go to state 30


State 31

   29 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 46


State 32

   26 FunDec: ID LP $@6 . RP

    RP  shift, and go to state 47


State 33

   24 FunDec: ID LP VarList . $@5 RP

    $default  reduce using rule 23 ($@5)

    $@5  go to state 48


State 34

   27 VarList: ParamDec . COMMA VarList
   28        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 28 (VarList)


State 35

    5 ExtDef: Specifier ExtDecList $@1 SEMI .

    $default  reduce using rule 5 (ExtDef)


State 36

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 37

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 38

   22 VarDec: VarDec LB INT . $@4 RB

    $default  reduce using rule 21 ($@4)

    $@4  go to state 50


State 39

   32 CompSt: error RC .

    $default  reduce using rule 32 (CompSt)


State 40

   31 CompSt: LC DefList . StmtList $@7 RC

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 26
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 41

   22 VarDec: VarDec . LB INT $@4 RB
   52 Dec: VarDec .
   53    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 23

    $default  reduce using rule 52 (Dec)


State 42

   49 Def: Specifier DecList . $@12 SEMI

    $default  reduce using rule 48 ($@12)

    $@12  go to state 66


State 43

   50 DecList: Dec .
   51        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 50 (DecList)


State 44

   15 StructSpecifier: STRUCT OptTag LC DefList $@3 . RC

    RC  shift, and go to state 68


State 45

   46 DefList: Def DefList .

    $default  reduce using rule 46 (DefList)


State 46

   22 VarDec: VarDec . LB INT $@4 RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 29 (ParamDec)


State 47

   26 FunDec: ID LP $@6 RP .

    $default  reduce using rule 26 (FunDec)


State 48

   24 FunDec: ID LP VarList $@5 . RP

    RP  shift, and go to state 69


State 49

   27 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 70
    ParamDec         go to state 34


State 50

   22 VarDec: VarDec LB INT $@4 . RB

    RB  shift, and go to state 71


State 51

   32 CompSt: error . RC
   45 Stmt: error . SEMI

    SEMI  shift, and go to state 72
    RC    shift, and go to state 39


State 52

   74 Exp: INT .

    $default  reduce using rule 74 (Exp)


State 53

   75 Exp: FLOAT .

    $default  reduce using rule 75 (Exp)


State 54

   67 Exp: ID . LP Args $@14 RP
   69    | ID . LP $@15 RP
   73    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 73 (Exp)


State 55

   64 Exp: MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 74


State 56

   65 Exp: NOT . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 75


State 57

   63 Exp: LP . Exp $@13 RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 76


State 58

   39 Stmt: RETURN . Exp $@9 SEMI

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 77


State 59

   40 Stmt: IF . LP Exp RP Stmt
   41     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 60

   44 Stmt: WHILE . LP Exp $@10 RP $@11 Stmt

    LP  shift, and go to state 79


State 61

   37 Stmt: CompSt .

    $default  reduce using rule 37 (Stmt)


State 62

   31 CompSt: LC DefList StmtList . $@7 RC

    $default  reduce using rule 30 ($@7)

    $@7  go to state 80


State 63

   33 StmtList: Stmt . StmtList

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 26
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 81
    Stmt      go to state 63
    Exp       go to state 64


State 64

   36 Stmt: Exp . $@8 SEMI
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   71    | Exp . LB Exp $@16 RB
   72    | Exp . DOT ID
